Unclean jgaucin viewer, 2D+3D view, Line+Area tool, not integrated.

--- a/pointcloudviewer/tsconfig.json
+++ b/pointcloudviewer/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "allowJs": true,
-    "module": "commonjs",
+    "module": "ESNext", // <-- CHANGE THIS
     "skipLibCheck": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
