--- a/pointcloudviewer/package.json
+++ b/pointcloudviewer/package.json
@@ -18,7 +18,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@electron-forge/cli": "^7.9.0",
+    "@electron-forge/cli": "^7.10.2",
     "@electron-forge/maker-deb": "^7.9.0",
     "@electron-forge/maker-rpm": "^7.9.0",
     "@electron-forge/maker-squirrel": "^7.9.0",
@@ -41,6 +41,7 @@
     "eslint-plugin-import": "^2.32.0",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "node-loader": "^2.1.0",
+    "path-browserify": "^1.0.1",
     "postcss-loader": "^8.2.0",
     "shadcn": "^3.3.1",
     "style-loader": "^3.3.4",
@@ -60,12 +61,14 @@
     "@react-three/fiber": "^9.3.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/three": "^0.180.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3-force": "^3.0.0",
     "date-fns": "^4.1.0",
     "electron-squirrel-startup": "^1.0.1",
     "embla-carousel-react": "^8.6.0",
+    "events": "^3.3.0",
     "lucide-react": "^0.544.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
@@ -75,9 +78,11 @@
     "react-icons": "^5.5.0",
     "react-pdf": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
+    "stream-browserify": "^3.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "three": "^0.180.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "util": "^0.12.5"
   }
 }
